# genegan_torch

./: .gitignore  AGENTS.md  README.md  pyproject.toml  queue.md  skill.md
configs/: celeba_default.yaml
genegan/: __init__.py  losses.py  trainer.py
genegan/cli/: preprocess_celebA.py  test.py  train.py
genegan/data/: celeba.py  transforms.py
genegan/models/: genegan.py  init.py
genegan/utils/: device.py  io.py  seed.py  vq_init.py
scripts/: eval_fid.py  prune_checkpoints.py  run_3h_experiment.py
tests/: test_forward.py  test_shapes.py
